## natural.ui.css  - Modified .tab__>ul.tab_scroll__.effect__ style  - Added .docs__>.docs_tab_context__>ul.docs_tabs__.effect__ style  - Added .popup__.alert__.block_overlay_msg__ .msg_box__ > .view_context__ style to prevent style inheritance on iOS

--- a/css/natural.ui.css
+++ b/css/natural.ui.css
@@ -196,6 +196,12 @@
 	resize: both;
 }
 
+/* To prevent inheritance on iOS */
+.popup__.alert__.block_overlay_msg__ .msg_box__ > .view_context__ {
+	-webkit-overflow-scrolling: auto;
+	resize: none;
+}
+
 .popup__.block_overlay_msg__ .msg_box__ {
 	background-color: #ffffff;
 	padding: 0;
